减少回显字段

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
         type: com.alibaba.druid.pool.DruidDataSource
         password: lostfound
         username: lostfounddatabase
+    # 不返回null值
+    jackson:
+        default-property-inclusion: non_null
 
 shiro-redis:
     redis-manager:
